# ESP32-Relay-Controller

./: .gitignore  README.md
NDS-firmware-esp32/: .gitignore  CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
NDS-firmware-esp32/cert/: _.google.crt  firmware.json
NDS-firmware-esp32/components/dns_hijack_srv/: CMakeLists.txt  dns_hijack_srv.c  dns_hijack_srv.h
NDS-firmware-esp32/components/led/: CMakeLists.txt  toggleled.c  toggleled.h
NDS-firmware-esp32/components/ota_updater/: CMakeLists.txt  component.mk  ota_update.c
NDS-firmware-esp32/components/reboot_counter/: CMakeLists.txt  reboot_count.c
NDS-firmware-esp32/components/relay_pattern_generate/: CMakeLists.txt  relay_pattern.c
NDS-firmware-esp32/components/restart_reset_random_INTR/: CMakeLists.txt  restart_reset_random_intr.c
NDS-firmware-esp32/components/restart_reset_random_intr/: CMakeLists.txt  restart_reset_random_intr.c
NDS-firmware-esp32/components/sntp_server/: CMakeLists.txt  sync_time.c
NDS-firmware-esp32/components/web_server/: CMakeLists.txt  DATA_FIELD.h  server.c  server.h
NDS-firmware-esp32/components/wifi/: CMakeLists.txt  connect.c
NDS-firmware-esp32/main/: CMakeLists.txt  component.mk  main.c
NDS-firmware-esp32/spiffs_dir/web_app/: info.html  (+8 more)
web-app/: captive.html  dashboard.html  info.html  nds.html  refresh_dashboard.html  refresh_relay.html  relay.html  settings.html  wifi_connect.html
web-app/assets/: dashboard.css  dashboard.js  info.css  info.js  nds.css  nds.js  relay.css  relay.js  settings.css  settings.js  wifi_connect.css  wifi_connect.js
(+22 files in other folders)
